--- a/src/TicketManagementMVC/Views/Home/EventInfo.cshtml
+++ b/src/TicketManagementMVC/Views/Home/EventInfo.cshtml
@@ -17,7 +17,7 @@
         <div class="row w-75">
             <div class="pl-4">
                 <div class="title-event">@Model.Event.Title</div>
-                <div class="description-event">Description:  @Model.Event.Description</div>
+                <div class="description-event">@Resource.DescriptionLabel:  @Model.Event.Description</div>
             </div>
         </div>
 </div>
