--- a/src/TicketManagementMVC/Views/Shared/_Layout.cshtml
+++ b/src/TicketManagementMVC/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/content/css")
     @Scripts.Render("~/bundles/mainJs")
+    @Scripts.Render("~/bundles/otherJs")
+    <script src="~/Scripts/eventmanager.workflow.js"></script>
 </head>
 <body>
     <div>
@@ -38,7 +40,5 @@
             </div>
         </footer>
     </div>
-
-    @Scripts.Render("~/bundles/otherJs")
 </body>
 </html>
