--- a/src/TicketManagementMVC/Views/Event/Edit.cshtml
+++ b/src/TicketManagementMVC/Views/Event/Edit.cshtml
@@ -1,12 +1,6 @@
 ﻿@{
     ViewBag.Title = EventResource.Edit;
 }
-<script type="text/javascript">
-    $(window).ready(function () {
-        GetEventsByVenue();
-    });
-</script>
-
 <div id="eventPlaceHolder">
     <h2 class="text-center">@EventResource.Edit</h2>
     <div class="form-group col-sm-10 offset-sm-1">
@@ -23,6 +17,12 @@
     <div id="editEventPlaceHolder">
     </div>
 </div>
+
+<script type="text/javascript">
+    $(function () {
+        $('#venueListToSortEvents').trigger("change");
+    });
+</script>
 
 <div id="editAreaPlaceHolder">
 </div>
